--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,5 @@
     <string name="votar">Votar</string>
     <string name="nome_do_candidato">Nome do Candidato</string>
     <string name="imagem_do_candidato">Imagem do candidato</string>
+    <string name="principais_problemas">Principais Problemas</string>
 </resources>
